--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="light_black">#2B2929</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#D3D3D3</color>
     <color name="dark_gray">#999B9E</color>
